# gradar_with_origin

./: BaseDialog.cpp  BaseDialog.h  CMakeLists.txt  GRadarVisual.aps  GRadarVisual.rc  GRaderVisual.vcxproj  algorithm.cu  gcolorbarlayer.cpp  gcolorbarlayer.h  gconfig.cpp  gconfig.h  gpredrnn.cpp  gpredrnn.h  gpredstart.cpp  gpredstart.h  gpuinfo.cpp  gpuinfo.h  gradarvisual.qrc  main.cpp  resource.h  tanimationconfigdlg.cpp  tanimationconfigdlg.h  tanimationconfigdlg.ui  tradarvisualwnd.cpp  tradarvisualwnd.h  tradarvisualwnd.ui
GMapper2D/: gcvtcoordinate.h  ggpscorrect.cpp  ggpscorrect.h  gmapconstant.h  gmapcoordconvert.cpp  gmapcoordconvert.h  gmapdownloader.cpp  gmapdownloader.h  gmaplayer.cpp  gmaplayer.h  gmaplayerset.cpp  gmaplayerset.h  gmapper2d_global.h  gmaptile.cpp  gmaptile.h  gmapview.cpp  gmapview.h
core/: gmath.cpp  gmath.h  greflection.h  gsingleton.h  gutils.cpp  gutils.h
map/: gdbfreader.cpp  gdbfreader.h  gshapelayer.cpp  gshapelayer.h  gshapereader.cpp  gshapereader.h
metstar/: NameIndex.cpp  NameIndex.h  geneCodeData.cpp  geneCodeData.h  genericBasedata.h  genericHeader.h  genericTask.cpp  genericTask.h  generic_basedata_cv.cpp  generic_basedata_cv.h  gradaralgorithm.cpp  gradaralgorithm.h  gradarvolume.cpp  gradarvolume.h  grader2dlayer.cpp  grader2dlayer.h  gradialbody.cpp  gradialbody.h  radar_dt.h
translations/: en_US.ts  zh_CN.ts
visual3d/: ggraphview.cpp  ggraphview.h  gopacitytable.cpp  gopacitytable.h  gopacityview.cpp  gopacityview.h  gslicecolormap.cpp  gslicecolormap.h  gvisualwidget.cpp  gvisualwidget.h  gvtkutil.cpp  gvtkutil.h  tgriddingconfigdlg.cpp  tgriddingconfigdlg.h  tgriddingconfigdlg.ui  topacitydlg.cpp  topacitydlg.h  topacitydlg.ui  tpredictdlg.cpp  tpredictdlg.h  tpredictdlg.ui  tradar3dwnd.cpp  tradar3dwnd.h  tradar3dwnd.ui  trenderconfigdlg.cpp  trenderconfigdlg.h  trenderconfigdlg.ui  tsliceconfigdlg.cpp  tsliceconfigdlg.h  tsliceconfigdlg.ui
